# fullstack-chatbot

./: .env.example  .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: environment.ts
frontend/src/lib/chat/api/: completions.ts  enums.ts  index.ts  interfaces.ts  messages.ts
frontend/src/lib/chat/components/: chat.tsx  index.ts  text-field.tsx
frontend/src/lib/chat/hooks/: use-documents.ts  use-messages.ts
frontend/src/lib/common/components/: app-layout.tsx
src/: database.py  environment.py  models.py  openai_client.py
src/app/: globals.css
src/lib/chat/components/: chat.tsx  index.ts  text-field.tsx
src/lib/common/components/: app-layout.tsx
src/routers/: contracts.py  documents.py  messages.py
