[tool.poetry]
name = "fullstack-chatbot"
version = "0.1.0"
description = "FastAPI server"
authors = ["Martin Tan <martinwdtan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"